--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-new_journey-*.tar
+journey-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+*.swp
+.DS_Store
