using a bigger runner for faster test runs

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   validate_changes:
     name: Run Linters and Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     services:
       pg:
         image: postgres:16.4-alpine
