--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -45,6 +45,10 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
       - name: Lint
+        env:
+          JOURNEY_BUILD_KEY: '${{ secrets.JOURNEY_BUILD_KEY }}'
         run: make lint
       - name: Test
+        env:
+          JOURNEY_BUILD_KEY: '${{ secrets.JOURNEY_BUILD_KEY }}'
         run: make test
